# wisecrow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  1_getting_started.md.html  404.html  Cargo.toml  Dockerfile  README.md  USAGE.md  common.nix  default.nix  devbox.json  docker-compose.deploy.yml  docker-compose.yml  flake.nix  print.html  result  run-integration-tests.sh  searchindex.js  searchindex.json
.devenv/: profile  run
.devenv/state/cargo-install/: .crates.toml  .crates2.json
.devenv/state/postgres/: postgresql.conf
.devenv/state/postgres/base/1/: 1259  14407_vm  2619  2619_vm  2658  2659  2663  2666  2667  2674  2679  2693  2696  2840  2841  3455  3456_vm  3541_vm  pg_internal.init
.devenv/state/postgres/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  14392  14392_fsm  14392_vm  14396  14397  14397_fsm  14397_vm  14401  14402  14402_fsm  14402_vm  14406  14407  14407_fsm  14407_vm  14411  174  175  2228  2337  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  (+184 more)
.devenv/state/postgres/base/4/: 1259  14392_vm  14402  14407  2579  2619  2665  2678  2692  2704  3164  3456
.devenv/state/postgres/base/5/: 1259  14392  14397  14397_vm  2664  2673  2675  2690  2691  2703  2837  2839  3085  pg_internal.init
.devenv/state/postgres/global/: 1214  1232  1233  1260  1262  1262_vm  2396  2397  2671  2672  2676  2677  pg_control  pg_internal.init
.devenv/state/postgres/pg_stat/: pgstat.stat
.github/workflows/: build.yml  docs.yml
ansible/: ansible.cfg
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: install.yml  logs.yml  preflight.yml  restart.yml  start.yml  stop.yml  update.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/wisecrow/tasks/: main.yml
ansible/roles/wisecrow/templates/: env.j2
ansible/vars/: secrets.yml.example
cmd/elixir/: README.md  default.nix  deps.nix  mix.exs
cmd/elixir/_build/dev/lib/mixer/.mix/: compile.app_tracer  (+1 more)
cmd/elixir/lib/: mixer.ex
cmd/elixir/test/: mixer_test.exs
cmd/haskell/: CHANGELOG.md  LICENSE  default.nix  wisecrow.cabal
cmd/ocaml/: default.nix
cmd/ocaml/_build/: log
cmd/ocaml/lib/: dune
cmd/ocaml/test/: dune
cmd/rust/: Cargo.toml  default.nix
datastore/: docker-compose.yml  prometheus.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: wisecrow-core.md  wisecrow-dto.md  wisecrow-mobile.md  wisecrow-web.md
docs/src/getting-started/: configuration.md  first-ingest.md  installation.md
docs/src/guides/: dual-n-back.md  glossing.md  graded-reader.md  grammar-workflows.md  ingesting-corpora.md  learn-tui.md  library-integration.md  preview-subtitles.md  sync-workflow.md
docs/src/reference/: architecture.md  cli-reference.md  configuration.md  contributing.md  database-schema.md  troubleshooting.md
implementations/ocaml/: flake.nix
migrations/: 001_languages_table.sql
rust/: Cargo.toml  build.rs  default.nix
rust/migrations/: 001_languages_table.sql  002_language_pairs_table.sql  003_frequency_pairs_table.sql  004_translations_table.sql
rust/src/: cli.rs  config.rs  downloader.rs  errors.rs  files.rs  lib.rs
rust/src/ingesting/: mod.rs
rust/src/processing/: mod.rs
rust/src/processing/file/: mod.rs
rust/src/processing/postgres/: mod.rs
src/: cli.rs  downloader.rs  errors.rs  frequency.rs  lib.rs  vocabulary.rs
src/golang/wisecrow/: default.nix  go.mod
src/grammar/: pdf.rs  quiz.rs
src/haskell/: CHANGELOG.md  default.nix  wisecrow.cabal
src/ingesting/: mod.rs
src/media/: cache.rs
src/ocaml/: default.nix  dune-project
src/ocaml/lib/: dune
src/ocaml/test/: dune
src/rust/: Cargo.toml  default.nix
src/rust/src/: files.rs
src/srs/: mod.rs  scheduler.rs  session.rs
src/tui/: app.rs  quiz.rs  speed.rs
src/tui/widgets/: card.rs  stats.rs
tests/common/: mod.rs
ui/typescript/: flake.nix
wisecrow-core/: Cargo.toml
wisecrow-core/migrations/: 002_translations_table.sql  003_performance_indexes.sql  004_frequency_and_srs.sql  005_fix_translation_unique_constraint.sql  006_cefr_grammar.sql  007_users.sql  008_sync_metadata.sql  009_dnb.sql  010_glosses.sql  011_card_user_scoping.sql
wisecrow-core/src/: cli.rs  config.rs  downloader.rs  dto_convert.rs  errors.rs  files.rs  frequency.rs  lib.rs  users.rs  vocabulary.rs
wisecrow-core/src/dnb/: feedback.rs  mod.rs  scoring.rs  session.rs
wisecrow-core/src/grammar/: ai_exercises.rs  gloss.rs  graded_reader.rs  mod.rs  pdf.rs  quiz.rs  rules.rs  seeder.rs
wisecrow-core/src/ingesting/: mod.rs
wisecrow-core/src/ingesting/parsing/: mod.rs
wisecrow-core/src/ingesting/persisting/: mod.rs
wisecrow-core/src/llm/: anthropic.rs  mod.rs  openai.rs  prompts.rs
wisecrow-core/src/media/: audio.rs  cache.rs  images.rs  mod.rs  prefetch.rs
wisecrow-core/src/preview/: annotate.rs  mod.rs  subtitle.rs  tokenize.rs
wisecrow-core/src/srs/: scheduler.rs  session.rs
wisecrow-core/src/sync/: client.rs  mod.rs
wisecrow-core/src/tui/: app.rs  mod.rs  speed.rs
wisecrow-core/src/tui/widgets/: card.rs  gloss.rs  mod.rs  stats.rs
wisecrow-core/tests/: gloss_cache.rs  migrations_smoke.rs  parse_persist.rs  pipeline.rs  preview_annotate.rs  vocabulary_learned.rs
wisecrow-core/tests/fixtures/: episode.ass  episode.srt  episode.vtt
wisecrow-dto/: Cargo.toml
wisecrow-dto/src/: lib.rs
wisecrow-mobile/: Cargo.toml
wisecrow-mobile/src/: main.rs  router.rs  server_fns.rs
wisecrow-mobile/src/components/: home.rs  layout.rs  learn.rs  mod.rs  nback.rs
wisecrow-web/: Cargo.toml  Dioxus.toml
wisecrow-web/assets/: style.css
wisecrow-web/src/: main.rs  router.rs
wisecrow-web/src/components/: home.rs  layout.rs  mod.rs
wisecrow-web/src/components/learn/: card.rs  mod.rs  stats.rs  timer.rs
wisecrow-web/src/components/nback/: game.rs  mod.rs  results.rs
wisecrow-web/src/components/quiz/: cloze.rs  mod.rs  multiple_choice.rs  rule_explanation.rs
wisecrow-web/src/server/: acquisition.rs  learn.rs  media.rs  mod.rs  nback.rs  quiz.rs  sync.rs
(+40 files in other folders)
