[package]
name = "wisecrow"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
name = "wisecrow-preprocessor"
path = "src/bin/wisecrow-preprocessor.rs"

[[bin]]
name = "wisecrow"
path = "src/bin/wisecrow.rs"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0" }
custom_derive = "0.1.7"
derive_more = { version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
envy = "0.4.2"
dotenvy = "0.15.7"
http = "1.1.0"
indicatif = "0.17.8"
newtype_derive = "0.1.6"
num-bigint = "0.4.5"
proptest = "1.5.0"
ratatui = { version = "0.27.0", features = ["all-widgets"] }
reqwest = { version = "0.12.5", features = ["blocking","json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["chrono","postgres", "runtime-tokio"] }
test-case = "3.3.1"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = "0.5.2"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
url = "2.5.0"
uuid = { version = "1.8.0", features = ["serde"] }
zeroize = "1.8.1"
flate2 = "1.0.35"
zip = "2.2.2"


