[package]
name = "wisecrow-core"
version = "0.1.0"
edition = "2021"
description = "Generate frequency-based flashcard datasets from multilingual subtitle corpora"
license = "MIT"
repository = "https://github.com/glottologist/wisecrow"
keywords = ["language", "flashcard", "frequency", "nlp", "corpus"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = []
audio = ["dep:msedge-tts", "dep:rodio"]
images = ["dep:ratatui-image", "dep:image"]

[lib]
name = "wisecrow"
path = "src/lib.rs"

[[bin]]
name = "wisecrow"
path = "src/bin/wisecrow.rs"

[dependencies]
wisecrow-dto = { path = "../wisecrow-dto" }
anyhow = "1.0.86"
chrono = { version = ">=0.4,<0.4.44", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
config = { version = "0.14.0" }
crossterm = "0.28"
derive_more = { version = "1.0.0", features = ["display"] }
dirs = "5"
dotenvy = "0.15"
flate2 = "1.0.35"
image = { version = "0.25", optional = true }
indicatif = "0.17.8"
msedge-tts = { version = "0.2", optional = true }
pdf-extract = "0.7"
quick-xml = "0.36"
ratatui = "0.29"
ratatui-image = { version = "1", optional = true }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
rodio = { version = "0.19", optional = true }
rs-fsrs = "1.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "migrate", "chrono"] }
thiserror = "2"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
url = "2.5.0"
zeroize = { version = "1.8.1", features = ["derive"] }
zip = "2.2.2"

[dev-dependencies]
proptest = "1.5.0"
rstest = "0.22"
tempfile = "3.14"
